Fix select overflowing in small font sizes

--- a/assets/js/base/components/select/style.scss
+++ b/assets/js/base/components/select/style.scss
@@ -1,5 +1,5 @@
 .wc-block-select {
-	height: 48px;
+	height: 3em;
 	position: relative;
 	margin-bottom: $gap-large;
 
